--- a/templates/first_page.html
+++ b/templates/first_page.html
@@ -10,8 +10,22 @@
                 <div class="intro-lead-in">Your Workouts.</div>
                 <div class="intro-lead-in">Your Schedules.</div>
                 <div class="intro-lead-in">Your Personal Trainer.</div>
-                <a href="/register" class="page-scroll btn btn-xl" style="margin-top: 1em;"> Register </a>
-                <a href="/login" class="page-scroll btn btn-xl" style="margin-top: 1em;"> Login </a>
+                <a href="/register" class="page-scroll btn btn-xl" style="margin-top: 1em;"> GET STARTED </a>
+            </div>
+            <div class="login-form">
+                <h4><i class="fas fa-dumbbell"></i>
+                Fitastic</h4>    
+                <form action="/login" method="POST">
+                <div class="username">
+                    <input type="username" name="username" placeholder="username" required>
+                </div>
+                <div class="password">
+                   <input type="password" name="password" placeholder="password" required>
+                </div>
+                <div>
+                  <input type="submit" value="Log In">
+                </div>
+              </form>
             </div>
         </div>
     </header>
