--- a/templates/add_more_exercise.html
+++ b/templates/add_more_exercise.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/todaydashboard">
         <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         Fitastic
@@ -16,27 +16,27 @@
         </li>
     </ul>
 </nav>
-
-
+<div class="container-fluid">
+    <div class="display-exericse">
 <div>
-<h3>Search Exercises:</h3>
+<h3>Search Exercises</h3>
 <form id="exercise-form" action="/choose_training_day" method="GET">
-    <h4>Equipment:</h4>
+    <h4>Equipment</h4>
     <select name="equipment" class="equipment_checkboxes selectpicker">
         <option value="">At Gym</option>
-        <option value="Barbell"> Barbell</option>
-        <option value="Bench"> Bench</option>
-        <option value="Dumbbell"> Dumbbell</option>
-        <option value="Gym mat"> Gym mat</option>
-        <option value="Incline bench"> Incline bench</option>
-        <option value="Kettlebell"> Kettlebell</option>
-        <option value="none (bodyweight exercise)"> none (bodyweight exercise)</option>
-        <option value="Pull-up bar"> Pull-up bar</option>
-        <option value="Swiss Ball"> Swiss Ball</option>
-        <option value="SZ-Bar"> SZ-Bar</option>
+        <option value="Barbell">Barbell</option>
+        <option value="Bench">Bench</option>
+        <option value="Dumbbell">Dumbbell</option>
+        <option value="Gym mat">Gym mat</option>
+        <option value="Incline bench">Incline bench</option>
+        <option value="Kettlebell">Kettlebell</option>
+        <option value="none (bodyweight exercise)">none (bodyweight exercise)</option>
+        <option value="Pull-up bar">Pull-up bar</option>
+        <option value="Swiss Ball">Swiss Ball</option>
+        <option value="SZ-Bar">SZ-Bar</option>
         
     </select>
-    <h4>Body Parts:</h4>
+    <h4>Body Parts</h4>
     <select name="category" class="category_checkboxes selectpicker">
         <option value="Abs">Abs</option>
         <option value="Arms">Arms</option>
@@ -52,13 +52,17 @@
     <input id="exercise_submit" type="submit" name="submit">
     </div>
 </form>
-</div>
+    </div>
+    <div class="row" style="width: 50%">
+    <div id="exercise_result" style="width: 100%" >
+    </div>
+    </div>
 </div>
 
-<div id="exercise_result">
-</div>
 
-<div class="detail-form">
+
+
+<div class="detail-form" style="border-radius: 15px">
     <form id="detail-form" action="/addexercises" method="POST">
     <p>
         <br>
@@ -101,80 +105,12 @@
 </form>
 <br>
 <div>
-
-<button type="button" onclick="location.href = document.referrer; return false;">Back</button>
+    <div class="success-info" style="display: none;">
+    Exercise successfully added!
+    </div>
+    <button type="button" onclick="location.href = document.referrer; return false;">Back</button>
 </div>
+<script src="../static/add_more_exercise.js"></script>
 
-
-<script>
-    $(function() {    
-        $('#exercise-form').on('submit', evt => {
-            evt.preventDefault();
-
-            const formData = {
-                equipment: $('.equipment_checkboxes').val(),
-                category: $('.category_checkboxes').val()
-            };
-            console.log(formData);
-             
-            $.get('/choose_exercises.json', formData, (results) => {
-                const exercise = results;
-                var list_html = "<br>"
-                list_html += "Results:"
-                list_html += "<ul>";
-                for (var i = 0; i < exercise.length; i++) {
-                    var obj = exercise[i];
-                    list_html += "<a class='list-group-item list-group-item-action' data-id=" + obj.exercise_id + ">" + obj.name ;
-                }
-                list_html += "</ul>"
-                $('#exercise_result').html(list_html);
-            });
-        });
-    });
-</script>
-
-<script>
-    $(function() {
-        $('#exercise_result').on('click', function(evt) {
-            evt.preventDefault();
-
-            const $evt = $(evt.target);
-            const id = $evt.data('id');
-            const url = '/addexercises/' + id;
-            console.log("id: ", id);
-
-            $.get('/search/' + id, id);
-            // $('.detail-form').attr('action', url);
-            $('.detail-form').toggle();
-        });
-    });
-</script>
-<script>
-    $(function() {
-        $('.detail-form').on('submit', function(evt) {
-            evt.preventDefault();
-
-
-            const formData = {
-                numberofsets: $('#set').val(),
-                reps: $('#rep').val(),
-                repunit: $('#repunit').val(),
-                weights: $('#weights').val(),
-                weightunit: $('#weightunit').val()
-            };
-            console.log(formData);
-            $.post('/addexercises', formData)
-
-        });
-    });
-</script>
-
-<script>
-    $(function(){
-        $('.done').on('click',function(){
-            location.href = '/addexercises'
-        });
-    });
-</script>
 
 {% endblock %}
